--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./src/css/reset.css">
+        <link rel="stylesheet" href="./src/css/style.css">
     </head>
     <body>
         <main>
@@ -24,7 +26,7 @@
             <div class="conteudo">
                 <div class="informacoes">
                     <img class="logo" src="./src/imgs/logo.png" alt="logo The Last of Uf">
-                    <p class="texto">
+                    <p class="descricao">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique molestiae doloremque alias quisquam nihil, amet quo provident hic, nemo vel itaque corrupti ipsum totam, assumenda dicta voluptatum dignissimos quasi repellendus.
                     </p>
                 </div>
