--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
         <main>
 
             <div class="carrossel">
-                <img src="./src/imgs/tlou-1.jpg" alt="Ellie e Joel abracados" class="imagem">
-                <img src="./src/imgs/tlou-2.jpg" alt="" class="imagem">
-                <img src="./src/imgs/tlou-3.jpg" alt="" class="imagem">
-                <img src="./src/imgs/tlou-4.jpg" alt="" class="imagem">
-                <img src="./src/imgs/tlou-5.jpg" alt="" class="imagem">
-                <img src="./src/imgs/tlou-6.jpg" alt="" class="imagem">
+                <img src="./src/imgs/tlou-1.jpg" alt="Ellie e Joel abracados" class="imagem ativa">
+                <img src="./src/imgs/tlou-2.jpg" alt="Personagens The Last of Us" class="imagem">
+                <img src="./src/imgs/tlou-3.jpg" alt="Joel olhando para a janela" class="imagem">
+                <img src="./src/imgs/tlou-4.jpg" alt="Ellie e Tess se olhando" class="imagem">
+                <img src="./src/imgs/tlou-5.jpg" alt="Ellie e Josel caminhando em uma cidade destruida" class="imagem">
+                <img src="./src/imgs/tlou-6.jpg" alt="Joel segurando a lanterna ligada na mão direita" class="imagem">
             </div>
 
             <div class="conteudo">
                 <div class="informacoes">
                     <img class="logo" src="./src/imgs/logo.png" alt="logo The Last of Uf">
                     <p class="descricao">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique molestiae doloremque alias quisquam nihil, amet quo provident hic, nemo vel itaque corrupti ipsum totam, assumenda dicta voluptatum dignissimos quasi repellendus.
+                        The Last of Us é uma série distópica da HBO baseada na franquia de jogos de videogame de mesmo nome criada por Neil Druckmann. O drama narra um futuro pandêmico que foi devastador para humanidade, deixando os seres humanos à beira da extinção.
                     </p>
                 </div>
                 <div class="botoes-carrossel">
-                    <button class="botao"></button>
+                    <button class="botao selecionado"></button>
                     <button class="botao"></button>
                     <button class="botao"></button>
                     <button class="botao"></button>
@@ -41,8 +41,8 @@
             </div>
             <aside class="menu-lateral">
                 <ul>
-                    <li><a href="#" target="_blank"><img class="icone" src="./src/imgs/github.png"></a></li>
-                    <li><a href="#" target="_blank"><img class="icone" src="./src/imgs/linkedin.png"></a></li>
+                    <li><a href="#" target="_blank"><img class="icone" src="./src/imgs/github.svg"></a></li>
+                    <li><a href="#" target="_blank"><img class="icone" src="./src/imgs/linkedin-in.svg"></a></li>
                 </ul>
             </aside>
         </main>
