--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
                 </ul>
             </aside>
         </main>
+        <script src="./src/js/index.js"></script>
     </body>
 </html>
